cat vars handling

--- a/code/pattern_mining.ipynb
+++ b/code/pattern_mining.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 824,
    "id": "76c01c86",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 825,
    "id": "a576fa9f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 826,
    "id": "5d4b04ba",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 827,
    "id": "9f754901",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 827,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 828,
    "id": "55f69ccf",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "Name: count, Length: 87, dtype: int64"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 828,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 829,
    "id": "02f30fd7",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 830,
    "id": "79e5c52d",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "Name: count, Length: 133, dtype: int64"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 830,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 831,
    "id": "e042ef05",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "Name: canHaveEpisodes, Length: 21556, dtype: object"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 831,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 832,
    "id": "7fc9d917",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
        "Name: isAdult, Length: 21556, dtype: object"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 832,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
    "id": "60d775da",
    "metadata": {},
    "source": [
-    "### Realizzazione bin\n",
+    "### Handling of numerical attributes\n",
     "Delle seguenti variabili: 'rating', 'startYear', 'numVotes', 'totalCredits', 'criticReviewsTotal', 'numRegions', 'userReviewsTotal',\n",
     "    'countryOfOrigin_freq_enc',\n",
     "       'countryOfOrigin_NA', 'countryOfOrigin_AF', 'countryOfOrigin_AS',\n",
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 833,
    "id": "696a72e4",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 834,
    "id": "5a0bf0ae",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 835,
    "id": "d4effb5f",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 836,
    "id": "0247510d",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 837,
    "id": "b90d9794",
    "metadata": {},
    "outputs": [],
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 838,
    "id": "e4fbb6e7",
    "metadata": {},
    "outputs": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 839,
    "id": "d92d6f02",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 840,
    "id": "6cde13a3",
    "metadata": {},
    "outputs": [],
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 841,
    "id": "0b5a0207",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 842,
    "id": "8940dcae",
    "metadata": {},
    "outputs": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 843,
    "id": "75d4b05e",
    "metadata": {},
    "outputs": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 844,
    "id": "23c1a18c",
    "metadata": {},
    "outputs": [],
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 845,
    "id": "85b5da11",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 846,
    "id": "1eef9d03",
    "metadata": {},
    "outputs": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 847,
    "id": "6cd220b5",
    "metadata": {},
    "outputs": [
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 848,
    "id": "0335fa18",
    "metadata": {},
    "outputs": [],
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 849,
    "id": "2a648f87",
    "metadata": {},
    "outputs": [],
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 850,
    "id": "d922877a",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 851,
    "id": "f2ddb706",
    "metadata": {},
    "outputs": [],
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 852,
    "id": "26b87880",
    "metadata": {},
    "outputs": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 853,
    "id": "a236ddc9",
    "metadata": {},
    "outputs": [],
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 854,
    "id": "63c52e95",
    "metadata": {},
    "outputs": [],
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 855,
    "id": "af978484",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 856,
    "id": "4f1725d0",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 857,
    "id": "80325e95",
    "metadata": {},
    "outputs": [],
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 858,
    "id": "69c6699e",
    "metadata": {},
    "outputs": [],
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 859,
    "id": "9283a408",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 860,
    "id": "074d6c2f",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 861,
    "id": "9adc0297",
    "metadata": {},
    "outputs": [],
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 862,
    "id": "93fd2435",
    "metadata": {},
    "outputs": [],
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 863,
    "id": "ec5badb6",
    "metadata": {},
    "outputs": [
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 864,
    "id": "66ee3e54",
    "metadata": {},
    "outputs": [],
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 865,
    "id": "31dec078",
    "metadata": {},
    "outputs": [
@@ -1283,6 +1283,144 @@
    "source": [
     "print(df_copy.groupby('userReviewsTotal_bin')['userReviewsTotal'].describe())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ea49eee",
+   "metadata": {},
+   "source": [
+    "### Handling of categorical attributes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe22e1e7",
+   "metadata": {},
+   "source": [
+    "##### titleType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 866,
+   "id": "b05aadb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_type_dummies_tr = pd.get_dummies(df_copy['titleType'], prefix='titleType')\n",
+    "df_copy = pd.concat([df_copy, title_type_dummies_tr], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 867,
+   "id": "fd5e421d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['originalTitle', 'rating', 'startYear', 'endYear', 'runtimeMinutes',\n",
+       "       'awardWins', 'numVotes', 'totalImages', 'totalVideos', 'totalCredits',\n",
+       "       'criticReviewsTotal', 'titleType', 'awardNominationsExcludeWins',\n",
+       "       'canHaveEpisodes', 'isAdult', 'numRegions', 'userReviewsTotal',\n",
+       "       'is_Documentary', 'is_History', 'is_Adventure', 'is_Thriller',\n",
+       "       'is_Game-Show', 'is_Comedy', 'is_Sci-Fi', 'is_Romance', 'is_Biography',\n",
+       "       'is_Musical', 'is_Western', 'is_Music', 'is_Film-Noir', 'is_Adult',\n",
+       "       'is_Reality-TV', 'is_News', 'is_Action', 'is_Crime', 'is_Short',\n",
+       "       'is_Fantasy', 'is_Family', 'is_Mystery', 'is_Talk-Show', 'is_Drama',\n",
+       "       'is_Sport', 'is_War', 'is_Horror', 'is_Animation',\n",
+       "       'fill_runtimeMinutes', 'is_from_Oceania', 'is_from_North America',\n",
+       "       'is_from_South America', 'is_from_Asia', 'is_from_Africa',\n",
+       "       'is_from_Europe', 'countryOfOrigin', 'countryOfOrigin_freq_enc',\n",
+       "       'countryOfOrigin_NA', 'countryOfOrigin_AF', 'countryOfOrigin_AS',\n",
+       "       'countryOfOrigin_EU', 'countryOfOrigin_OC', 'countryOfOrigin_SA',\n",
+       "       'countryOfOrigin_UNK', 'fill_runtimeMinutes_Bruno', 'totalNominations',\n",
+       "       'totalMedia', 'runtimeMinutes_notitletype', 'log_totalNominations',\n",
+       "       'log_nom_bin_cut', 'nom_bin_cut', 'log_totalMedia', 'media_bin',\n",
+       "       'log_media_bin', 'log_fill_runtimeMinutes_Bruno', 'runtime_bin',\n",
+       "       'log_runtime_bin', 'rating_bin', 'log_numVotes', 'log_numvotes_bin',\n",
+       "       'numVotes_bin', 'log_totalCredits', 'log_totalCredits_bin',\n",
+       "       'totalCredits_bin', 'log_criticReviewsTotal',\n",
+       "       'log_criticReviewsTotal_bin', 'criticReviewsTotal_bin',\n",
+       "       'log_numRegions', 'log_numRegions_bin', 'numRegions_bin',\n",
+       "       'log_userReviewsTotal', 'log_userReviewsTotal_bin',\n",
+       "       'userReviewsTotal_bin', 'titleType_movie', 'titleType_short',\n",
+       "       'titleType_tvEpisode', 'titleType_tvMiniSeries', 'titleType_tvMovie',\n",
+       "       'titleType_tvSeries', 'titleType_tvShort', 'titleType_tvSpecial',\n",
+       "       'titleType_video'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 867,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_copy.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faf86f48",
+   "metadata": {},
+   "source": [
+    "##### countryOfOrigin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 869,
+   "id": "ce207c84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def discretize_continent_count(df, col_name, cont):\n",
+    "    new_col = f'{col_name}_presence'\n",
+    "    \n",
+    "    def label(value):\n",
+    "        if value == 0:\n",
+    "            return f'none_{cont}'\n",
+    "        elif value == 1:\n",
+    "            return f'one_{cont}'\n",
+    "        else:\n",
+    "            return f'multiple_{cont}'\n",
+    "    \n",
+    "    df[new_col] = df[col_name].apply(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 870,
+   "id": "f2469051",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discretize_continent_count(df_copy, \"countryOfOrigin_NA\", \"from_NorthAmerica\")\n",
+    "discretize_continent_count(df_copy, \"countryOfOrigin_EU\", \"from_Europe\")\n",
+    "discretize_continent_count(df_copy, \"countryOfOrigin_SA\", \"from_SouthAmerica\")\n",
+    "discretize_continent_count(df_copy, \"countryOfOrigin_AS\", \"from_Asia\")\n",
+    "discretize_continent_count(df_copy, \"countryOfOrigin_OC\", \"from_Oceania\")\n",
+    "discretize_continent_count(df_copy, \"countryOfOrigin_AF\", \"from_Africa\")\n",
+    "discretize_continent_count(df_copy, \"countryOfOrigin_UNK\", \"Unknown_continent\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba5d8aeb",
+   "metadata": {},
+   "source": [
+    "### Pattern Mining"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc1bbf48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
