--- a/report_data_semantics/capitolo5.tex
+++ b/report_data_semantics/capitolo5.tex
@@ -1,2 +1,11 @@
 \chapter{Pattern Mining}
 \label{ch:capitolo2}
+
+\section{Extraction of frequent patterns}\label{sec:freq_patterns}
+
+
+\section{Extraction of rules}\label{sec:rules}
+
+
+
+\section{Exploiting rules for target prediction}\label{sec:prediction_rules}
