--- a/report_data_semantics/main.tex
+++ b/report_data_semantics/main.tex
@@ -261,7 +261,7 @@ title=\lstname % show the filename of files included with \lstinputlisting; also
 \end{center}
 
 The aim of this report is to display an analysis carried out on the IMDb dataset; the analysis has been conducted making use of data mining methodologies. 
-After the data understanding and preparation phase, clustering, classification, and pattern mining techniques have been applied.
+After the data understanding and preparation phase, clustering, classification, regression and pattern mining techniques have been applied.
 
 % \vspace{2cm}
 
