--- a/report_data_semantics/capitolo3.tex
+++ b/report_data_semantics/capitolo3.tex
@@ -4,7 +4,7 @@ Classification was performed on the available training set using three different
 For K-NN \textbf{and Naïve Bayes}, a portion of the training set (referred to as the validation set) was used to select the best hyperparameters \textbf{each} model.
 The features used in K-NN and Naïve Bayes were normalized, as these models are sensitive to unscaled values.
 After training, the models were evaluated on the test set using standard performance metrics. 
-The target variables chosen for this task are \textbf{2/3 dipende se includiamo anche is\_from\_NA}: \texttt{titleType}, \texttt{has\_LowEngagement} \textbf{, and is\_from\_NA}.
+The target variables chosen for this task are 2: \texttt{titleType}, and \texttt{has\_LowEngagement}.
 These will be discussed in more detail in the corresponding sections below.
 
 \section{Multiclass classification}\label{sec:multiclass_classification}
