--- a/report_data_semantics/main.tex
+++ b/report_data_semantics/main.tex
@@ -7,7 +7,7 @@
 % \documentclass[12pt, twoside]{report}
 
 % Margini (4cm a sx, 2.5cm a dx, 2.5cm in alto, 2.5cm in basso)
-\usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm, centering]{geometry}
+\usepackage[top=2cm, bottom=2cm, left=1.5cm, right=1.5cm, centering]{geometry}
 
 % Per la stampa fronte-retro sostituire con: 
 % \usepackage[top=2.5cm, bottom=2.5cm, inner=4cm, outer=4cm, right=2.5cm, centering]{geometry}
@@ -51,6 +51,8 @@
 % \usepackage{longtable}
 \usepackage{tabularx}
 \usepackage{ragged2e}
+\usepackage{multicol} % Per supportare colonne multiple
+
 
 
 
@@ -255,6 +257,8 @@ title=\lstname % show the filename of files included with \lstinputlisting; also
      %\vspace{2cm}
      {\LARGE { Data Mining: Fundamentals}}\\
      \vspace{2cm}
+    {\Large { A.Y\:2024/2025 }}\\
+    \vspace{2cm}
     {\Large { Group 12 }}\\
      \vspace{2cm}
      {\large { Bruno Barbieri, Noemi Dalmasso, Gaia Federica Francesca Ferrara }}
@@ -290,8 +294,6 @@ After the data understanding and preparation phase, clustering, classification, 
 \setcounter{page}{1}
 \input{capitolo1.tex} %data preparation
 
-
-
 \input{capitolo2.tex} %clustering
 
 \input{capitolo3.tex} %classification
@@ -299,10 +301,6 @@ After the data understanding and preparation phase, clustering, classification, 
 \input{capitolo4.tex} %regression
 
 \input{capitolo5.tex} %pattern mining
-
-% \addcontentsline{toc}{chapter}{Conclusioni} % Capitolo non numerato
-%\input{conclusioni.tex} non servono le conclusioni
-
 
 
 % \thispagestyle{empty}
